fixed spacing of landing page on mobile

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -71,6 +71,7 @@ header {
 
         @media only screen and (max-width: $mobile) {
             justify-content: left;
+            margin-top: 20px;
         }
 
         .heading {
